--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <input type="password" id="password" name="password" required><br><br>
       <label for="confirm-password">Confirm Password:</label>
       <input type="password" id="confirm-password" name="confirm-password" required><br><br>
-      <button type="submit">Sign Up</button>
+      <button type="submit">
+          <a href="https://onion-mmmmm.github.io/rottenbanana.online/">Sign Up</a>
+      </button>
     </form>
     <p>Already have an account? <a href="login.html">Login</a></p>
   </div>
