--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="https://onion-mmmmm.github.io/rottenbanana.online/">Sign Up</a>
       </button>
     </form>
-    <p>Already have an account? <a href="login.html">Login</a></p>
+    <p>Already have an account? <a href="https://onion-mmmmm.github.io/RottenBananas.online-login/">Login</a></p>
   </div>
   <script src="app.js"></script>
 </body>
