--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
       <input type="password" id="password" name="password" required><br><br>
       <label for="confirm-password">Confirm Password:</label>
       <input type="password" id="confirm-password" name="confirm-password" required><br><br>
-      <button type="submit">
-          <a href="https://onion-mmmmm.github.io/rottenbanana.online/">Sign Up</a>
+      <a>      
+        <button type="submit"> Sign up
       </button>
+      </a>
+
     </form>
     <p>Already have an account? <a href="https://onion-mmmmm.github.io/RottenBananas.online-login/">Login</a></p>
   </div>
