--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <label for="confirm-password">Confirm Password:</label>
       <input type="password" id="confirm-password" name="confirm-password" required><br><br>
       <a>      
-        <button type="submit"> Sign up
+        <button type="submit"> 
+          Sign up
       </button>
       </a>
 
